# tojax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/mlff/: README.md  export_common.py  export_mace.py  export_mattersim.py  export_orb.py  export_uma.py
src/tojax/: __init__.py  data.py  dtype.py  functions.py  graph.py  mode.py  rng.py  scatter.py  tojax.py  utils.py  wrapper.py
src/tojax/patches/: __init__.py  e3nn.py
test/: test_dtype.py  test_export.py  test_functions.py  test_graph.py  test_mliap_models.py  test_scatter.py  test_tensor.py  test_vision_models.py
