[project]
name = "tojax"
version = "0.1.0"
description = "Effortlessly transform PyTorch functions to JAX"
readme = "README.md"
authors = [
    { name = "Nicholas Gao", email = "nicholas@cusp.ai" },
    { name = "CuspAI OpenSource Team", email = "opensource@cusp.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "flax>=0.11.2; python_version < '3.14'",
    "flax>=0.12.3; python_version >= '3.14'",
    "jax>=0.5; python_version < '3.14'",
    "jax>=0.7.1; python_version >= '3.14'",
    "torch>=2.0.0; python_version < '3.14'",
    "torch>=2.10.0; python_version >= '3.14'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mace-torch = { git = "https://github.com/n-gao/mace.git", branch = "ng/remove_cast" }

[dependency-groups]
dev = [
    "e3nn-jax>=0.20.8",
    "ipykernel>=6.30.1",
    "mace-torch>=0.3.14",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
    "torchvision>=0.23.0",
]

[tool.pytest_env]
JAX_PLATFORMS = "cpu"
JAX_ENABLE_X64 = "True"

[tool.pytest.ini_options]
addopts = "-n auto --durations=10 --dist worksteal -v --color=yes"
