[project]
name = "tojax"
version = "1.0.1"
description = "Effortlessly transform PyTorch functions to JAX"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nicholas Gao", email = "nicholas@cusp.ai" },
    { name = "CuspAI OpenSource Team", email = "opensource@cusp.ai" }
]
keywords = ["pytorch", "jax", "compilation", "machine-learning", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "flax>=0.11.2; python_version < '3.14'",
    "flax>=0.12.3; python_version >= '3.14'",
    "jax>=0.5; python_version < '3.14'",
    "jax>=0.7.1; python_version >= '3.14'",
    "torch>=2.0.0; python_version < '3.14'",
    "torch>=2.10.0; python_version >= '3.14'",
]
[project.urls]
Homepage = "https://github.com/cusp-ai-oss/tojax"
Repository = "https://github.com/cusp-ai-oss/tojax"
Issues = "https://github.com/cusp-ai-oss/tojax/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src", "/LICENSE", "/README.md", "/pyproject.toml"]

[tool.uv.sources]
mace-torch = { git = "https://github.com/n-gao/mace.git", branch = "ng/remove_cast" }

[dependency-groups]
dev = [
    "e3nn-jax>=0.20.8",
    "ipykernel>=6.30.1",
    "mace-torch>=0.3.14",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
    "torchvision>=0.23.0",
]

[tool.pytest_env]
JAX_PLATFORMS = "cpu"
JAX_ENABLE_X64 = "True"

[tool.pytest.ini_options]
addopts = "-n auto --durations=10 --dist worksteal -v --color=yes"
